Fixed the spacing in experiences page

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,6 @@ font-family: 'Roboto Mono', monospace; */
   .point-education .list-training{ 
     padding-bottom: 25px;
     font-size: 17px;
-    
   }
   
 .content {
@@ -88,7 +87,7 @@ h1 {
 
 p {
   font-size: 25px;
-  padding: 10px;
+  
 }
 
 .btn-branding {
@@ -155,6 +154,10 @@ ul {
 
 .location {
   font-size: 18px;
+}
+
+.row .admin{
+  text-align: right;
 }
 
 /* CONTACT PAGE */
